--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-if": "^2.0.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
+    "gulp-stylelint": "^3.7.0",
     "gulp-watch": "^4.3.11"
   }
 }
