--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
     "gulp-stylelint": "^3.7.0",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "stylelint-scss": "^1.4.1"
   }
 }
