--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -17,6 +20,8 @@
     "gulp-sourcemaps": "^2.4.0",
     "gulp-stylelint": "^3.7.0",
     "gulp-watch": "^4.3.11",
-    "stylelint-scss": "^1.4.1"
+    "stylelint-scss": "^1.4.1",
+    "webpack": "^1.14.0",
+    "webpack-stream": "^3.2.0"
   }
 }
