--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.6",
+    "eslint": "^3.14.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-if": "^2.0.2",
